dota2详情页赛前分析

--- a/V1/dota2_detail.html
+++ b/V1/dota2_detail.html
@@ -965,6 +965,9 @@
                                         <p>最终恭喜WE取得本次Pinnacle杯赛事的冠军</p>
                                     </div>
                                 </div>
+                                <div class="">
+
+                                </div>
                             </div>
                             <!-- 比赛详情 -->
                         </div>
