--- a/V1/懒加载.html
+++ b/V1/懒加载.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no">
+    <meta name="viewport" content="width=640, user-scalable=no, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>Document</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
@@ -1424,7 +1424,7 @@
         function slideup(){ 
             $(".banner").slideUp();
         } 
-        var t1 = window.setTimeout(slideup,3000); 
+        // var t1 = window.setTimeout(slideup,3000); 
         
     </script>
     <script>
