修改了赛事专题页tab切换##问题

--- a/V1/eventsdetail.html
+++ b/V1/eventsdetail.html
@@ -74,16 +74,16 @@
                 <div class="event_detail mb20">
                     <ul class="event_detail_ul">
                         <li class="active">
-                            <a href="##">季前赛</a>
+                            季前赛
                         </li>
                         <li>
-                            <a href="##">常规赛一</a>
+                            常规赛一
                         </li>
                         <li>
-                            <a href="##">常规赛二</a>
+                            常规赛二
                         </li>
                         <li>
-                            <a href="##">季后赛</a>
+                            季后赛
                         </li>
                     </ul>
                     <div class="event_detail_content">
