--- a/V1/s11.html
+++ b/V1/s11.html
@@ -40,8 +40,7 @@
                             <li class="nav_li"><a href="##" class="nav_lia">电竞选手</a></li>
                             <li class="on nav_li"><a href="##" class="nav_lia">电竞资讯</a></li>
                             <li class="nav_li"><a href="" class="nav_lia">游戏攻略</a></li>
-                            <li class="active nav_li">
-                                <a href="##" class="nav_lia">赛事专题</a>
+                            <li class="nav_li"><a href="##" class="nav_lia">赛事专题</a>
                                 <div class="ti10Box">
                                     Ti10
                                 </div>
