--- a/V1/s11.html
+++ b/V1/s11.html
@@ -107,7 +107,7 @@
                 </div>
                 <!-- 比赛介绍 -->
                 <!-- 赛制 -->
-                <div class="format mb20">
+                <div class="s11_format mb20">
                     <div class="team_pub_top clearfix">
                         <div class="team_pub_img fl">
                             <img class="imgauto" src="./images/format_icon.png" alt="">
@@ -769,18 +769,20 @@
                                 </div>
                             </div>
                         </div>
-                        <ul class="s11_previous_ul">
-                            <li class="s11_previous_ulLi active"><span>2020</span></li>
-                            <li class="s11_previous_ulLi"><span>2019</span></li>
-                            <li class="s11_previous_ulLi"><span>2018</span></li>
-                            <li class="s11_previous_ulLi"><span>2017</span></li>
-                            <li class="s11_previous_ulLi"><span>2016</span></li>
-                            <li class="s11_previous_ulLi"><span>2015</span></li>
-                            <li class="s11_previous_ulLi"><span>2014</span></li>
-                            <li class="s11_previous_ulLi"><span>2013</span></li>
-                            <li class="s11_previous_ulLi"><span>2012</span></li>
-                            <li class="s11_previous_ulLi"><span>2011</span></li>
-                        </ul>
+                        <div class="s11_previous_ul_wrapper">
+                            <ul class="s11_previous_ul">
+                                <li class="s11_previous_ulLi active"><span>2020</span></li>
+                                <li class="s11_previous_ulLi"><span>2019</span></li>
+                                <li class="s11_previous_ulLi"><span>2018</span></li>
+                                <li class="s11_previous_ulLi"><span>2017</span></li>
+                                <li class="s11_previous_ulLi"><span>2016</span></li>
+                                <li class="s11_previous_ulLi"><span>2015</span></li>
+                                <li class="s11_previous_ulLi"><span>2014</span></li>
+                                <li class="s11_previous_ulLi"><span>2013</span></li>
+                                <li class="s11_previous_ulLi"><span>2012</span></li>
+                                <li class="s11_previous_ulLi"><span>2011</span></li>
+                            </ul>
+                        </div>
                         <div class="s11_previous_champions">
                             <div class="s11_champions_item active">
                                 <p class="s11_champions_title">2020全球总决赛冠军</p>
@@ -1055,8 +1057,8 @@
                 })
             }
 
-            // if($(window).height() <= 768){
-            // }
+            if($(window).height() <= 768){
+            }
       
 
 
